--- a/Day48Demo.Services/Day48Demo.Services.csproj
+++ b/Day48Demo.Services/Day48Demo.Services.csproj
@@ -74,12 +74,15 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DepartmentService.cs" />
+    <Compile Include="Services\DepartmentService.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Department.cs" />
+    <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\UsersServices.cs" />
+    <Compile Include="Utilities\DbHelper.cs" />
     <Compile Include="Utilities\HtmlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
